# kuberacle

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/assets/: architecture.mmd
.github/workflows/: deploy.yml  docs-check.yml  eval.yml  reusable-index-build.yml  tests.yml
configs/: rag.yaml  selected_pages.yaml
configs/datasets/: full.yaml  smoke.yaml
configs/prompts/v1/: answer.yaml  citation_enforcement.yaml  gate.yaml
configs/prompts/v2/: answer.yaml  citation_enforcement.yaml  gate.yaml
deploy/observability/: README.md  create_alerts.sh  create_log_metrics.sh  create_uptime_check.sh  dashboard.json
evals/golden/: README.md  smoke.jsonl  v1.jsonl  v2.jsonl
scripts/: download_data.py  evaluate.py  ingest.py  preprocess.py  pull_index.py  push_index.py  query.py  serve.py
src/k8s_rag/api/: app.py  guardrails.py  schemas.py  settings.py  turnstile.py
src/k8s_rag/evaluation/: __init__.py  dataset.py  metrics.py  ragas_metrics.py  report.py  runner.py
src/k8s_rag/ingestion/: __init__.py  config.py  embedder.py  pipeline.py  schemas.py  vector_store.py
src/k8s_rag/preprocessing/: chunker.py  frontmatter.py  links.py  page_selection.py  pipeline.py  shortcodes.py  structure.py
src/k8s_rag/retrieval/: __init__.py  bm25.py  factory.py  generator.py  hybrid.py  prompts.py  qa.py  reranker.py  retriever.py
src/kuberacle/: __init__.py  __main__.py  config.py  constants.py  factory.py  gate.py  generator.py  index_sync.py  interfaces.py  provenance.py  qa.py  vertex.py
src/kuberacle/api/: __init__.py  app.py  cache.py  counters.py  (+2 more)
tests/: test_api.py  test_chunker.py  test_counters.py  test_docs_check.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_report.py  test_eval_runner.py  test_evaluate_cli.py  test_factory.py  test_frontmatter.py  test_gate.py  test_guardrails.py  test_index_sync.py  test_links.py  test_page_selection.py  test_pipeline.py  test_provenance.py  test_rag_config.py  test_rag_ingestion.py  test_rag_retrieval.py  test_ragas_metrics.py  test_settings.py  test_shortcodes.py  test_streaming.py  test_structure.py  test_turnstile.py
tests/api/: test_api.py  test_api_observability.py  test_cache.py  test_counters.py  test_guardrails.py  test_settings.py
tests/evaluation/: test_eval_metrics.py  test_eval_report.py  test_eval_runner.py  test_evaluate_cli.py
tests/observability/: test_context.py  test_cost.py  test_events.py  test_instrumentation.py  test_logging.py  test_obs_settings.py  test_pipeline_metrics.py  test_prompts.py  test_tracing.py
tests/preprocessing/: test_chunker.py  test_download_data.py  test_links.py  test_page_selection.py
tests/retrieval/: test_rag_retrieval.py
web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: brand.tsx  chat-input.tsx  chat.tsx  citation-card.tsx  citation-preview.tsx  code-block.tsx  copy-button.tsx  cube-icon.tsx  empty-state.tsx  message.tsx  social-links.tsx  theme-toggle.tsx  top-bar.tsx  turnstile.tsx  version-provider.tsx
web/lib/: constants.ts  sse.ts  types.ts  use-rag-chat.ts
(+56 files in other folders)
