[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-docs-rag"
version = "0.1.0"
description = "Production-grade RAG system for Kubernetes documentation"
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "pyyaml>=6.0",
    "google-genai",
    "google-auth",
    "google-cloud-storage",
    "requests",
    "python-dotenv",
    "chromadb",
    "rank-bm25",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn[standard]",
]
eval = [
    "datasets",
    "ragas",
    "langchain-google-genai",
]
dev = [
    "pytest>=7.0",
    "httpx",
    "k8s-docs-rag[api]",
    "k8s-docs-rag[eval]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
