[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kuberacle"
version = "0.1.0"
description = "Production-grade Kubernetes documentation assistant"
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "pyyaml>=6.0",
    "google-genai",
    "google-auth",
    "google-cloud-storage",
    "requests",
    "python-dotenv",
    "chromadb",
    "rank-bm25",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn[standard]",
    "google-cloud-firestore",
]
eval = [
    "datasets",
    "ragas",
    "langchain-google-genai",
]
dev = [
    "pytest>=7.0",
    "httpx",
    "kuberacle[api]",
    "kuberacle[eval]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
