[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kuberacle"
version = "0.1.0"
description = "Production-grade Kubernetes documentation assistant"
requires-python = ">=3.10"
# Abstract dependencies with tested-against version floors. Exact, reproducible
# pins for the full environment live in requirements.lock (generated).
dependencies = [
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "google-genai>=2.8",
    "google-auth>=2.54",
    "google-cloud-storage>=3.12",
    "requests>=2.32",
    "python-dotenv>=1.2",
    "chromadb>=1.5",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.49",
    "google-cloud-firestore>=2.27",
]
eval = [
    "datasets>=5.0",
    "ragas>=0.4",
    "langchain-google-genai>=4.2",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "kuberacle[api]",
    "kuberacle[eval]",
]

[project.scripts]
kuberacle-download-data = "kuberacle.cli.download_data:main"
kuberacle-preprocess = "kuberacle.cli.preprocess:main"
kuberacle-ingest = "kuberacle.cli.ingest:main"
kuberacle-query = "kuberacle.cli.query:main"
kuberacle-evaluate = "kuberacle.cli.evaluate:main"
kuberacle-serve = "kuberacle.cli.serve:main"
kuberacle-push-index = "kuberacle.cli.push_index:main"
kuberacle-pull-index = "kuberacle.cli.pull_index:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
